--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,9 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  http: ^0.12.2
   flutter_appauth: ^0.9.2+6
-  url_launcher: ^5.7.10
+  flutter_secure_storage: ^3.3.5
   flutter:
     sdk: flutter
 
