--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   http: ^0.12.2
   flutter_appauth: ^0.9.2+6
   flutter_secure_storage: ^3.3.5
+  flutter_conditional_rendering: ^1.1.1
+  fluttertoast: ^7.1.8
   flutter:
     sdk: flutter
 
