--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_secure_storage: ^3.3.5
   flutter_conditional_rendering: ^1.1.1
   fluttertoast: ^7.1.8
+  whatsapp_stickers: ^0.0.4
   flutter:
     sdk: flutter
 
