--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,12 @@ environment:
 
 dependencies:
   http: ^0.12.2
+  dio: ^3.0.10
   flutter_appauth: ^0.9.2+6
   flutter_secure_storage: ^3.3.5
   flutter_conditional_rendering: ^1.1.1
   fluttertoast: ^7.1.8
+  loading_overlay: ^0.2.1
   whatsapp_stickers: ^0.0.4
   flutter:
     sdk: flutter
