--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   http: ^0.12.2
   dio: ^3.0.10
+  path_provider: ^1.6.27
   flutter_appauth: ^0.9.2+6
   flutter_secure_storage: ^3.3.5
   flutter_conditional_rendering: ^1.1.1
