--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   http: ^0.12.2
   dio: ^3.0.10
   path_provider: ^1.6.27
+  permission_handler: ^5.1.0+2
   flutter_appauth: ^0.9.2+6
   flutter_secure_storage: ^3.3.5
   flutter_conditional_rendering: ^1.1.1
@@ -36,3 +37,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/logo.png
+    - assets/tray_Cuppy.png
