custom tray image support

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,7 +29,7 @@ android {
     compileSdkVersion 30
 
     aaptOptions {
-        noCompress "webp"
+        noCompress "webp", "png"
     }
 
     sourceSets {
