add NoAssetContentProvider to metdata

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,9 @@
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="steeker">
+
+        <meta-data android:name="NonAssetContentProvider" android:value="true" />
+
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
