--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   http: ^0.12.2
   dio: ^3.0.10
   firebase_performance: ^0.5.0+1
+  firebase_analytics: ^7.0.1
+  firebase_core: ^0.7.0
   path_provider: ^1.6.27
   permission_handler: ^5.1.0+2
   flutter_appauth: ^0.9.2+6
