--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,22 +9,22 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  sentry_flutter: ^4.0.4
-  http: ^0.12.2
-  dio: ^3.0.10
-  firebase_performance: ^0.5.0+1
-  firebase_analytics: ^7.0.1
-  firebase_core: ^0.7.0
-  path_provider: ^1.6.27
-  permission_handler: ^5.1.0+2
-  flutter_appauth: ^0.9.2+6
-  flutter_secure_storage: ^3.3.5
-  flutter_conditional_rendering: ^1.1.1
-  fluttertoast: ^7.1.8
-  loading_overlay: ^0.2.1
-  flutter_whatsapp_stickers: ^1.0.0+4
-  package_info: ^0.4.3+4
-  url_launcher: ^5.7.10
+  sentry_flutter: ^6.0.1
+  http: ^0.13.3
+  dio: ^4.0.0
+  firebase_performance: ^0.7.1+1
+  firebase_analytics: ^8.3.3
+  firebase_core: ^1.7.0
+  path_provider: ^2.0.5
+  permission_handler: ^8.1.6
+  flutter_appauth: ^1.1.0+2
+  flutter_secure_storage: ^4.2.1
+  flutter_conditional_rendering: ^2.0.0
+  fluttertoast: ^8.0.8
+  loading_overlay: ^0.3.0
+  flutter_whatsapp_stickers: ^1.0.0+5
+  package_info: ^2.0.2
+  url_launcher: ^6.0.12
   flutter:
     sdk: flutter
 
